messing with sprites

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Rich Photography</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
     <script src="main.js"></script>
 </head>
 <body>
     <div class="center">
-    <img class="logo" src="rich_logo.jpg" height="200" alt="LOGO" id="indexLogo">
+    <img src="rich_logo.jpg" height="200" alt="LOGO" id="indexLogo">
     </div>
 
+    <div class="center">
+    <span class="facebook icon"><a href="#">Facebook</a></span>
+    </div>
 </body>
 </html>
